fixed height of content-block & subscribe on tablet screen

--- a/src/style/partials/row.scss
+++ b/src/style/partials/row.scss
@@ -32,6 +32,7 @@
   color: $white-color;
 
   background-color: $orange;
+  min-height: 200px;
 
   &--white {
     color: $orange;
