--- a/src/style/partials/subscribe.scss
+++ b/src/style/partials/subscribe.scss
@@ -50,6 +50,7 @@
 @media only screen and (max-width: 768px) {
   .subscribe {
     flex-direction: column;
+    min-height: 280px;
 
     &__text {
       margin-bottom: 40px;
